--- a/trial.css
+++ b/trial.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #073b4c;
+    /* background-color: #073b4c; */
+    background-color: #cff665;
    }
    
    .body {
@@ -28,8 +29,10 @@ body {
    .cardFront {
     position: relative;
     background-color: #fff;
-    width: 250px;
-    height: 350px;
+    /* width: 250px;
+    height: 350px; */
+    width: 300px;
+    height: 400px;
     overflow: hidden;
     transform-origin: left;
     box-shadow: inset 100px 20px 100px rgba(0, 0, 0, .2), 30px 0 50px rgba(0, 0, 0, 0.4);
@@ -126,8 +129,10 @@ body {
    .cardInside {
     position: absolute;
     background-color: #fff;
-    width: 250px;
-    height: 350px;
+    /* width: 250px;
+    height: 350px; */
+    width: 300px;
+    height: 400px;
     z-index: -1;
     left: 0;
     top: 0;
