--- a/trial.css
+++ b/trial.css
@@ -24,6 +24,7 @@ body {
     transform-style: preserve-3d;
     transform: perspective(2500px);
     transition: 1s;
+    left:-30px;
    }
    
    .cardFront {
