--- a/trial.css
+++ b/trial.css
@@ -1,7 +1,8 @@
+
 body {
      /* background-color: #eeff00;   */
     /* background-color: #e3f023;  */
-    background-image: url(./fbg2.jpg);
+    background-image: url(./bg3.png);
    }
    
    .body {
@@ -44,7 +45,7 @@ body {
    }
    
    .happy {
-    font-family: Tahoma, sans-serif;
+     font-family: Tahoma, sans-serif; 
     text-align: center;
     margin: 30px;
     background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
