--- a/trial.css
+++ b/trial.css
@@ -20,13 +20,15 @@ body {
    
    .birthdayCard {
     position: relative;
-    width: 250px;
-    height: 350px;
+    /* width: 250px;
+    height: 350px; */
+    width: 300px;
+    height: 400px;
     cursor: pointer;
     transform-style: preserve-3d;
     transform: perspective(2500px);
     transition: 1s;
-    left:-28px;
+    /* left:-28px; */
     top:50px;
    }
    
